[metadata]
name = mini-cheetah-motor-driver-socketcan
version = 0.4.3
author = Shubham Vyas
author_email = Shubham.Vyas@dfki.de
description = A Python Driver for MIT Mini-Cheetah Actuator which uses SocketCAN for communication.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfki-ric-underactuated-lab/mini-cheetah-tmotor-python-can
project_urls =
    Bug Tracker = https://github.com/dfki-ric-underactuated-lab/mini-cheetah-tmotor-python-can/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Framework :: Robot Framework :: Tool
    Topic :: System :: Hardware :: Hardware Drivers

[options]
package_dir =
    = src
packages = motor_driver
python_requires = >=3.6
install_requires =
    bitstring

[options.packages.find]
where = src
